Atualiza a porta do servidor para 8888 em arquivos de configuração e scripts, além de ajustar URLs no README e em scripts de execução. Remove arquivos JSP e CSS não utilizados, e realiza melhorias na estrutura de código, incluindo a adição de novos métodos e ajustes em DTOs e serviços.